--- a/templates/responsive.html
+++ b/templates/responsive.html
@@ -1,37 +1,107 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<title>CSS Website Layout</title>
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
     box-sizing: border-box;
+    
 }
 
-.col-container {
+body {
+  margin: 0;
+  font-family: "serif";
+}
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    opacity:1;
+    font-weight: 500;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+/* Style the header */
+.header {
+    background-color: #416788;
+    padding: 10px;
+    
+    border-radius: 10px;
+    border: 2px solid white;
+}
+
+h2 {
+    margin: 0px 10px 0px 10px;
+    text-align: left;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 25%;
+    padding: 15px;
+    display:block;
+    height:250px;
+    background-color:#A3CEF1;
+    padding: 5px;
+    border-radius: 20px;
+    border: 4px solid white;
+    
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
     display: table;
-    width: 100%;
+    clear: both;
 }
-.col {
-    display: table-cell;
-    padding: 16px;
-    border-radius: 25px;
-    border: 3px solid white;
-  
-}
-.lost{
-  font-size:35px;
-    font-color: #800000 ;
-    position: relative;
 
-  text-align: center;
-  text-transform: capitalize;
+/* Footer */
+.footer {
+    padding: 30px;
+    text-align: center;
+    background: #416788;
+    margin-top: 50px;
+    border-radius: 10px;
+    border: 2px solid white;
 }
+
 .blinking{
-    font-size:35px;
+    font-size:25px;
     font-color: #691E9E;
     position: relative;
-
-  text-align: center;
+    
+  text-align: left;
   text-transform: capitalize;
   animation:blinkingText 2s infinite;
 }
@@ -43,52 +113,95 @@
   100%{ color: #000;  }
 }
 
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+    transition: margin-left .5s;
+    padding: 5px;
+}
 
-@media only screen and (max-width: 600px) {
-    .col { 
-        display: block;
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width:600px) {
+    .column {
         width: 100%;
     }
+    .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
 </style>
 </head>
 <body>
-
-
-<h1>Person Tracker</h1>
-
-<div class="col-container">
-  <div class="col" style="background:#a3d2e3">
-    <h1 style="color:#2D5779">Dome1</h1>
-    {%  for item in dome1 %}
-        <p class="blinking"> {{ item }}</p>
-    {%  endfor %}
+<div id="main">
+<div class="header">
+  <div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">About</a>
+  <a href="#">Info</a>
+  <a href="/download">Statistics</a>
+  <a href="#">Contact</a>
+</div>
+<h1 style="font-size:35px;color:#E0E0E2; text-align: center;">Person Tracker</h1>
+ <span style="color:#E0E0E2;font-size:30px;cursor:pointer ;" onclick="openNav()">&#9776; </span>
   
-  </div>
-
-  <div class="col" style="background:#a3d2e3">
-    <h1 style="color:#2D5779">Dome2</h1>
-    {%  for item in dome2 %}
-        <p class="blinking"> {{ item }} </p>
-    {%  endfor %}
-    
-  </div>
-
-  <div class="col" style="background:#a3d2e3">
-    <h1 style="color:#2D5779">Dome3</h1>
-    {%  for item in dome3 %}
-        <p class="blinking"> {{ item }}</p>
-    {%  endfor %}
-   
-  </div>
-  <div class="col" style="background:#a3d2e3">
-    <h1 style="color:#2D5779">Dome4</h1>
-    {%  for item in dome4 %}
-        <p class="blinking"> {{ item }}</p>
-    {%  endfor %}
-    
-  </div>
+ 
 </div>
 
+
+
+
+<div class="row">
+  <div class="column">
+    <h2 style="color:#2D5779">Dome1</h2>
+    <ul style="list-style-type:None">
+  {%  for item in dome1 %}
+        <li class="blinking"> {{ item }}</li>
+    {%  endfor %}
+</ul>
+  </div>
+  <div class="column">
+    <h2 style="color:#2D5779">Dome2</h2>
+    <ul style="list-style-type:None">
+  {%  for item in dome2 %}
+        <li class="blinking"> {{ item }}</li>
+    {%  endfor %}
+</ul>
+  </div>
+  <div class="column">
+    <h2 style="color:#2D5779">Library</h2>
+     
+      <ul style="list-style-type:None">
+  {%  for item in dome3 %}
+        <li class="blinking"> {{ item }}</li>
+    {%  endfor %}
+</ul>
+      
+  </div>
+   <div class="column">
+    <h2 style="color:#2D5779">Cafetaria</h2>
+    <ul style="list-style-type:None">
+  {%  for item in dome4 %}
+        <li class="blinking"> {{ item }}</li>
+    {%  endfor %}
+</ul>
+  </div>
+</div>
+<div class="footer">
+  <h3 style="color:#E0E0E2">Desinged by: Design Thinking Lab</h3>
+   <h3 style="color:#E0E2D1">Copyright ©  <a style="color:#F08700" href="https://curiositygym.com/
+">CuriosityGym</a>   All rights reserved</h3>
+</div>
+</div>
+<script>
+/* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
+function openNav() {
+    document.getElementById("mySidenav").style.width = "200px";
+    document.getElementById("main").style.marginLeft = "200px";
+}
+
+/* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+    document.getElementById("main").style.marginLeft = "0";
+}
+</script>
 </body>
 </html>
