--- a/templates/responsive.html
+++ b/templates/responsive.html
@@ -150,7 +150,7 @@ h2 {
 
 <div class="row">
   <div class="column">
-    <h2 style="color:#2D5779">Dome1</h2>
+    <h2 style="color:#2D5779">{{ area[0] }}</h2>
     <ul style="list-style-type:None">
   {%  for item in dome1 %}
         <li class="blinking"> {{ item }}</li>
@@ -158,7 +158,7 @@ h2 {
 </ul>
   </div>
   <div class="column">
-    <h2 style="color:#2D5779">Dome2</h2>
+    <h2 style="color:#2D5779">{{ area[1] }}</h2>
     <ul style="list-style-type:None">
   {%  for item in dome2 %}
         <li class="blinking"> {{ item }}</li>
@@ -166,7 +166,7 @@ h2 {
 </ul>
   </div>
   <div class="column">
-    <h2 style="color:#2D5779">Library</h2>
+    <h2 style="color:#2D5779">{{ area[2] }}</h2>
      
       <ul style="list-style-type:None">
   {%  for item in dome3 %}
@@ -176,7 +176,7 @@ h2 {
       
   </div>
    <div class="column">
-    <h2 style="color:#2D5779">Cafetaria</h2>
+    <h2 style="color:#2D5779">{{ area[3] }}</h2>
     <ul style="list-style-type:None">
   {%  for item in dome4 %}
         <li class="blinking"> {{ item }}</li>
