--- a/templates/responsive.html
+++ b/templates/responsive.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Website Layout</title>
+<title>Person Tracker Live</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -54,7 +54,7 @@ body {
 /* Style the header */
 .header {
     background-color: #416788;
-    padding: 10px;
+    padding: 1px;
     
     border-radius: 10px;
     border: 2px solid white;
