--- a/templates/responsive.html
+++ b/templates/responsive.html
@@ -134,10 +134,10 @@ h2 {
 <div class="header">
   <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Info</a>
+  <a href="/about">About</a>
+  <a href="/info">Info</a>
   <a href="/download">Statistics</a>
-  <a href="#">Contact</a>
+  <a href="/contact">Contact</a>
 </div>
 <h1 style="font-size:35px;color:#E0E0E2; text-align: center;">Person Tracker</h1>
  <span style="color:#E0E0E2;font-size:30px;cursor:pointer ;" onclick="openNav()">&#9776; </span>
