--- a/templates/responsive.html
+++ b/templates/responsive.html
@@ -4,6 +4,7 @@
 <title>Person Tracker Live</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="refresh" content="5">
 <style>
 * {
     box-sizing: border-box;
