--- a/templates/responsive.html
+++ b/templates/responsive.html
@@ -135,7 +135,7 @@ h2 {
 <div class="header">
   <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="/about">About</a>
+  <a href="/">About</a>
   <a href="/info">Info</a>
   <a href="/download">Statistics</a>
   <a href="/contact">Contact</a>
